--- a/plugins/mcpp/config.json
+++ b/plugins/mcpp/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Minecraft Player Poller",
   "description": "A simple API interacting tool to get information about players on a specified server",
-  "cmd": "mcpp",
+  "cmd": "minecraft",
   "defaultJSONProvider": "https://api.mcsrvstat.us/2/"
 }
